--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "prismjs": "1.30.0",
     "brace-expansion": "^2.0.2",
     "glob": "10.5.0",
-    "js-yaml": "4.1.1"
+    "js-yaml": "4.1.1",
+    "qs": "6.14.1"
   }
 }
