--- a/package.json
+++ b/package.json
@@ -112,8 +112,11 @@
     "brace-expansion": "^2.0.2",
     "glob": "10.5.0",
     "js-yaml": "4.1.1",
-    "qs": "6.14.1",
+    "qs": "6.14.2",
     "lodash": "4.17.23",
-    "lodash-es": "4.17.23"
+    "lodash-es": "4.17.23",
+    "minimatch": "5.1.7",
+    "ajv": "^6.14.0",
+    "basic-ftp": "5.2.0"
   }
 }
